--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -4,58 +4,59 @@
 
         <div class="container-fluid">
             <div class="p-5 my-4 bg-light rounded-3">
-                <% if (user.following === 0) { %>
-                    <div class="text-center">
-                        <h1>Welcome
-                            <%= user.username %>, your feed is empty.</h1>
-                        <p id="default" class="lead">Your feed displays the latest posts from the people you follow. Search for interesting posts with the search feature and follow other users with similar interests.</p>
-                    </div>
-                    <% } %>
-                        <% if (user.following !== 0) { %>
-                            <div class="d-flex align-items-center mb-2">
-                                <a class="d-flex align-items-center me-3" href="#" id="userImg">
-                                    <% if(user.image) { %>
-                                        <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
-                                        <% }%>
-                                </a>
-                                <h4 class="me-3">Icon
-                                    <%= user.username.toUpperCase() %>
-                                </h4>
-                            </div>
-                            <div class="py-3" id="follows-posts">
-                                <% if (posts === undefined) {%>
-                                    <div class="text-center">
-                                        <p>Your friends have not posted recently</p>
-                                    </div>
-                                    <% } else{ %>
-                                        <h3><small class="text-muted text-center"><i>This is your feed</i></small></h5>
-                                            <% posts.forEach(post => {%>
-                                                <div class="d-flex border rounded-3 p-2 mb-2">
-                                                    <div class="flex-shrink-0">
-                                                        <% if(user.image) { %>
-                                                            <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
-                                                            <% }%>
-                                                    </div>
-                                                    <div class="flex-grow-1 ms-3">
+                <%- include("../partials/flash.ejs"); -%>
+                    <% if (user.following === 0) { %>
+                        <div class="text-center">
+                            <h1>Welcome
+                                <%= user.username %>, your feed is empty.</h1>
+                            <p id="default" class="lead">Your feed displays the latest posts from the people you follow. Search for interesting posts with the search feature and follow other users with similar interests.</p>
+                        </div>
+                        <% } %>
+                            <% if (user.following !== 0) { %>
+                                <div class="d-flex align-items-center mb-2">
+                                    <a class="d-flex align-items-center me-3" href="#" id="userImg">
+                                        <% if(user.image) { %>
+                                            <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                            <% }%>
+                                    </a>
+                                    <h4 class="me-3">Icon
+                                        <%= user.username.toUpperCase() %>
+                                    </h4>
+                                </div>
+                                <div class="py-3" id="follows-posts">
+                                    <% if (posts === undefined) {%>
+                                        <div class="text-center">
+                                            <p>Your friends have not posted recently</p>
+                                        </div>
+                                        <% } else{ %>
+                                            <h3><small class="text-muted text-center"><i>This is your feed</i></small></h5>
+                                                <% posts.forEach(post => {%>
+                                                    <div class="d-flex border rounded-3 p-2 mb-2">
+                                                        <div class="flex-shrink-0">
+                                                            <% if(user.image) { %>
+                                                                <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                                                <% }%>
+                                                        </div>
+                                                        <div class="flex-grow-1 ms-3">
 
-                                                        <h6>
-                                                            <%= post.user %>
-                                                        </h6>
-                                                        <p><small class="text-muted"><i> Posted on <%= post.createdAt.toDateString() %></i></small></p>
-                                                        <h6>
-                                                            <%= post.title %>
-                                                        </h6>
-                                                        <p>
-                                                            <%= post.content %>
-                                                        </p>
-                                                        <a href='/post/<%= post._id %>' class="btn btn-sm btn-primary">View Post</a>
+                                                            <h6>
+                                                                <%= post.user %>
+                                                            </h6>
+                                                            <p><small class="text-muted"><i> Posted on <%= post.createdAt.toDateString() %></i></small></p>
+                                                            <h6>
+                                                                <%= post.title %>
+                                                            </h6>
+                                                            <p>
+                                                                <%= post.content %>
+                                                            </p>
+                                                            <a href='/post/<%= post._id %>' class="btn btn-sm btn-primary">View Post</a>
 
+                                                        </div>
                                                     </div>
-                                                </div>
-                                                <% });
+                                                    <% });
 		} %>
-                            </div>
-                            <% } %>
+                                </div>
+                                <% } %>
             </div>
 
 
