--- a/views/pages/fellow.ejs
+++ b/views/pages/fellow.ejs
@@ -56,7 +56,7 @@
 			  fellowPosts.forEach(fellowPost => {%>
                                     <div class="d-flex border rounded-3 p-2 mb-2">
                                         <div class="flex-shrink-0">
-                                            <% if(fellowPost.image) { %>
+                                            <% if(fellow.image) { %>
                                                 <img src="<%=fellow.image%>" class="rounded-circle m-3" height="30" alt="User's avatar" loading="lazy" />
                                                 <% }%>
                                         </div>
@@ -88,7 +88,9 @@
 			  followers.forEach(follow => { %>
                                     <div class="d-flex border rounded-3 p-2 mb-2">
                                         <div class="flex-shrink-0">
-                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp" class="rounded-circle m-3" height="18" id="fol-id" alt="Portrait of a Woman" loading="lazy" />
+                                            <% if(fellow.image) { %>
+                                                <img src="<%=fellow.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                                <% }%>
                                         </div>
                                         <div class="flex-grow-1 ms-3">
                                             <a href='/folprofile/<%= follow.username %>'>
