--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -60,4 +60,17 @@
             </div>
 
 
-            <%- include("../partials/footer.ejs"); %>
+            <hr>
+    </main>
+    <footer>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>Copyright &copy; 2023 Livchat</p>
+            </div>
+        </div>
+    </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
+
+    </html>
