--- a/views/pages/single_post.ejs
+++ b/views/pages/single_post.ejs
@@ -5,47 +5,43 @@
 
         <div class="container">
             <div class="p-5 my-4 bg-light rounded-3">
-                <a href="/profile>"><i class="fas fa-arrow-circle-left" style="color:grey"></i></a>
-                <div class="row">
-                    <!-- <div class="pt-3 text-center muted" style="background:#C8E6C9">
-				<p>%New post successfully created%</p>
-			</div> -->
-                    <div id="postCard" pclass="card mb-3 card-body">
-                        <div class="row align-items-center">
-                            <div class="col-auto">
-                                <!--                         <a href="#!.html"> -->
-                                <img src="#" class="width-90 rounded-3" alt="">
-                                <!--                         </a> -->
-                            </div>
-                            <div>
-                                <div class="d-flex flex-row">
-                                    <h4 class="text-reset mb-0 d-inline">
-                                        <%= post.title %>
-                                    </h4>
-                                    <ul class="ms-auto navbar-nav d-flex flex-row">
-                                        <li class="nav-item me-3 me-lg-0">
-                                            <a href="/post/edit/<%= post._id%>"><i class="fas fa-edit me-2" style="color:blue" id="postEdit"></i></a>
-                                        </li>
-                                        <li class="nav-item me-3 me-lg-0">
-                                            <a href="/post/delete/<%= post._id%>"><i class="fas fa-trash-can" style="color:red" id="postDelete"></i></a>
-                                        </li>
-                                    </ul>
+                <%- include("../partials/flash.ejs"); -%>
+                    <a href="/profile"><i class="fas fa-arrow-circle-left" style="color:grey"></i></a>
+                    <div class="row">
+                        <div id="postCard" pclass="card mb-3 card-body">
+                            <div class="row align-items-center">
+                                <div class="col-auto">
+                                    <img src="#" class="width-90 rounded-3" alt="">
                                 </div>
-                                <aside class="text-muted d-block mb-2 small">Posted by
-                                    <a href="#">
-                                        <%= post.user%>
-                                    </a> at
-                                    <%= post.createdAt %> time ago</aside>
-                                <p>
-                                    <%= post.content %>
-                                </p>
-                                <div class="col-12">
-                                    <hr>
+                                <div>
+                                    <div class="d-flex flex-row">
+                                        <h4 class="text-reset mb-0 d-inline">
+                                            <%= post.title %>
+                                        </h4>
+                                        <ul class="ms-auto navbar-nav d-flex flex-row">
+                                            <li class="nav-item me-3 me-lg-0">
+                                                <a href="/post/edit/<%= post._id%>"><i class="fas fa-edit me-2" style="color:blue" id="postEdit"></i></a>
+                                            </li>
+                                            <li class="nav-item me-3 me-lg-0">
+                                                <a href="/post/delete/<%= post._id%>"><i class="fas fa-trash-can" style="color:red" id="postDelete"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <aside class="text-muted d-block mb-2 small">Posted by
+                                        <a href="#">
+                                            <%= post.user%>
+                                        </a> at
+                                        <%= post.createdAt %> time ago</aside>
+                                    <p>
+                                        <%= post.content %>
+                                    </p>
+                                    <div class="col-12">
+                                        <hr>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
             </div>
 
 
